service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test1
  name: test1
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: test1
  type: ClusterIP
