ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: test1
  name: test1
spec:
  rules:
  - host: test1.default.internal.ing.dev.k8s.gfsrv.net
    http:
      paths:
      - backend:
          service:
            name: test1
            port:
              number: 5000
        path: /
        pathType: Prefix
